kelas istio/02. Traffic management/e. traffic mirroring/dashboard/dashboard-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dashboard-dr
  namespace: default
spec:
  host: dashboard.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      app: dashboard
    
    # ini dapat di implementasikan di sebuah subset atau global satu subset
    # https://istio.io/latest/docs/reference/config/networking/destination-rule/#TrafficPolicy
    trafficPolicy:

      # untuk mengkontrol jumlah koneksi ke sebuah service
      connectionPool:
        tcp:
          maxConnections: 1
        http:
          http1MaxPendingRequests: 1
          maxRequestsPerConnection: 1
      
      # untuk "mengusir" pod yang gak sehat berdasarkan responsenya dari load balancing pool
      outlierDetection:
        consecutive5xxErrors: 3
        baseEjectionTime: 2m
        maxEjectionPercent: 100
